# pa-ai-assistant

./: README.md  pyproject.toml
pa-ai-assistant/confs/: confs.yaml
pa-ai-assistant/utils/: instagram_util.py  onedrive_util.py
