[tool.poetry]
name = "pa-ai-assistant"
version = "0.1.0"
description = ""
authors = ["Yueh-Cheng Chang <ycchang.pmp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
msal = "^1.28.0"
requests = "^2.32.0"
polars = "^0.20.18"
numpy = "^1.26.4"
pyyaml = "^6.0.1"
langchain = "^0.1.14"
openai = "^1.16.2"
onedrivesdk = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
